--- a/pom.xml
+++ b/pom.xml
@@ -47,13 +47,13 @@
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>mysql</groupId>
+            <groupId>org.postgresql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
+            <artifactId>postgresql</artifactId>
             <optional>true</optional>
         </dependency>
         <dependency>
