--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,6 @@ springdoc.swagger-ui.path=/index.html
 #--server.error.whitelabel.enabled=false
 #server.address=192.168.0.93
 
-env.jwtSecret = fdsfdfokpokposdwkfposksd
-env.jwtExpiration = 200000
-env.refreshTokenExpiration = 30000
+#env.jwtSecret = fdsfdfokpokposdwkfposksd
+#env.jwtExpiration = 200000
+#env.refreshTokenExpiration = 30000
