--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,10 +16,14 @@ spring.jpa.hibernate.ddl-auto= update
 springdoc.api-docs.path=/tropsmart-api-docs
 springdoc.swagger-ui.path=/index.html
 
-#server.port=${PORT:8085}
+#H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/console
+
+server.port=${PORT:8085}
 #--server.error.whitelabel.enabled=false
 #server.address=192.168.0.93
 
-#env.jwtSecret = fdsfdfokpokposdwkfposksd
-#env.jwtExpiration = 200000
-#env.refreshTokenExpiration = 30000
+env.jwtSecret = fdsfdfokpokposdwkfposksd
+env.jwtExpiration = 200000
+env.refreshTokenExpiration = 30000
