--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.jpa.hibernate.ddl-auto= update
 
 #SWAGGER
 springdoc.api-docs.path=/tropsmart-api-docs
-springdoc.swagger-ui.path=/index.html
+#springdoc.swagger-ui.path=/index.html
 
 #H2
 spring.h2.console.enabled=true
