--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,9 +12,11 @@ spring.datasource.password=71ed1f94abdb92185c2d07b8a993ae933e4cd442b0f674b7e6dad
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto= update
 
+spring.mvc.pathpattern.matching-strategy=ant_path_matcher
+
 #SWAGGER
 springdoc.api-docs.path=/tropsmart-api-docs
-#springdoc.swagger-ui.path=/index.html
+springdoc.swagger-ui.path=/index.html
 
 #H2
 spring.h2.console.enabled=true
